<resources>
    <string name="app_name">Any Chat</string>
    <string name="text">Now chat with any WhatsApp number without saving it in to your contacts.
        \n\n-> Enter country code ( without \' + \' ) in CC.
        \n\n-> Enter Mobile Number (without country code) in Mobile Number field. </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="cc">CC</string>
    <string name="india_country_code">91</string>
    <string name="chat">Chat</string>
    <string name="welcome">WELCOME</string>
    <string name="contact">CONTACT</string>
    <string name="contact_url">https://smaxiso.github.io/contact.html</string>
</resources>
