<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Welcome TextView -->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:background="@color/colorAccent"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <!-- About TextView -->
    <TextView
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:text="@string/text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/green"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:gravity="center_horizontal"
        tools:ignore="RtlCompat" />

    <!-- Country Code EditText -->
    <EditText
        android:id="@+id/cc"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/cc"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="3"
        android:text="@string/india_country_code"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/chat"
        app:layout_constraintEnd_toStartOf="@+id/phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintVertical_bias="0.02"
        android:autofillHints="@string/cc"
        android:gravity="center_horizontal" />

    <!-- Phone EditText -->
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        app:layout_constraintVertical_bias="0.02"
        android:autofillHints="@string/mobile_number" />

    <!-- Chat Button -->
    <Button
        android:id="@+id/chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorner"
        android:text="@string/chat"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Contact Button -->
    <Button
        android:id="@+id/contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/contact"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/roundcorner2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Number Being Contacted TextView -->
    <TextView
        android:id="@+id/nutext"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat"
        app:layout_constraintVertical_bias="0.195" />

</androidx.constraintlayout.widget.ConstraintLayout>
